--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> Binaraweb </title>
 
     <!--swiper-->
         <link
@@ -16,19 +16,19 @@
 </head>
 <body>
 
-<div class="wrapper">
-       <nav class="navbar">
+    <nav class="navbar">
         <div class="navbar__menu">
             <a href="" class="navbar__menu--item active">Inicio</a>
             <a href="" class="navbar__menu--item">Servicios</a>
             <a href="" class="navbar__menu--item">Nosotros</a>
         </div>
-
+        
         <div class="logo">
             <img class="logo__image" src="/public/build/img/binara-logo.png" alt="">
         </div>
-   </nav> 
-
+    </nav> 
+    
+    <div class="wrapper">
    <header class="header">
         <div class="header__title">
             <h1>Transformamos tu <span>presencia</span> digital</h1>
